# jupyter-vextab

./: README.md  demo.ipynb  setup.cfg  setup.py
jupyter_vextab/: __init__.py  magics.py  render.py
jupyter_vextab/static/: index.js
