[metadata]
name = jupyter_vextab
version = attr:jupyter_vextab.version.__version__
author = Tony Hirst
author_email = tony.hirst+jupyter_vextab@gmail.com
license = MIT
description = Magic command for Vextab in a Jupyter notebook
keywords =
  jupyter
  notebook
  music
  sheet_music
  notation
  vextab

[options]
packages =
  jupyter_vextab
include_package_data = False
zip_safe = False
install_requires =
  notebook
tests_require =
  pytest

[options.package_data]
jupyter_vextab = static/*.js

[bdist_wheel]
universal = 1
